--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "__MSG_extensionName__",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"author": "Azicore",
 	"default_locale": "en",
 	"description": "__MSG_extensionDescription__",
@@ -35,6 +35,14 @@
 	},
 	"browser_action": {
 		"default_title": "__MSG_browserActionTitle__",
+		"default_icon": {
+			"16": "img/icon16.png",
+			"32": "img/icon32.png",
+			"64": "img/icon64.png"
+		}
+	},
+	"sidebar_action": {
+		"default_panel": "sidebar.html",
 		"default_icon": {
 			"16": "img/icon16.png",
 			"32": "img/icon32.png",
