--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "__MSG_extensionName__",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"author": "Azicore",
 	"default_locale": "en",
 	"description": "__MSG_extensionDescription__",
@@ -48,6 +48,7 @@
 		}
 	},
 	"sidebar_action": {
+		"browser_style": false,
 		"default_panel": "sidebar.html",
 		"default_icon": {
 			"16": "img/icon16.png",
