--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "__MSG_extensionName__",
-	"version": "1.4.1",
+	"version": "1.5.0",
 	"author": "Azicore",
 	"default_locale": "en",
 	"description": "__MSG_extensionDescription__",
@@ -18,20 +18,17 @@
 	},
 	"permissions": [
 		"tabs",
+		"tabHide",
 		"sessions",
 		"storage",
 		"history"
 	],
 	"commands": {
 		"start": {
-			"suggested_key": {
-				"default": "F1"
-			}
+			"description": "__MSG_shortcutStart__ (F1)"
 		},
 		"_execute_sidebar_action": {
-			"suggested_key": {
-				"default": "Ctrl+F1"
-			}
+			"description": "__MSG_shortcutSidebar__ (Ctrl+F1)"
 		}
 	},
 	"background": {
@@ -40,7 +37,7 @@
 		]
 	},
 	"browser_action": {
-		"default_title": "__MSG_browserActionTitle__ (F1)",
+		"default_title": "__MSG_browserActionTitle__",
 		"default_icon": {
 			"16": "img/icon16.png",
 			"32": "img/icon32.png",
